tests/cases/memory/errors/zone-pointer-after-borrowed-reset.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let item = zone::new<i64>(ref mut zone, 7);
  let borrowed = ref mut zone;
  zone::reset(borrowed);
  let value = *item;
  zone::destroy(zone);
  value
}
